Add project submissions
